# mdcat-ng

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  deny.toml  mdcat.1.adoc
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/superpowers/plans/: 2026-04-30-color-themes.md
docs/superpowers/specs/: 2026-04-30-color-themes-design.md
sample/: demo.md  stress.md
scripts/: package
src/: args.rs  cli.rs  error.rs  events.rs  lib.rs  main.rs  output.rs  references.rs  render.rs  resources.rs  terminal.rs  theme.rs
src/mdless/: buffer.rs  highlight.rs  keys.rs  mod.rs  search.rs  toc.rs  view.rs
src/parse/: markdown.rs  mod.rs
src/render/: code.rs  counted.rs  data.rs  highlighting.rs  html.rs  images.rs  links.rs  observer.rs  state.rs  tables.rs  write.rs
src/resources/: curl.rs  file.rs  image.rs  prefetch.rs  svg.rs
src/snapshots/: mdcat__tests__layout__begins_with_block_quote.snap  mdcat__tests__layout__flush_ref_links_at_end.snap  mdcat__tests__layout__flush_ref_links_before_toplevel_heading.snap  mdcat__tests__layout__heading_in_block_quote.snap  mdcat__tests__layout__heading_levels.snap  mdcat__tests__layout__rule_in_block_quote.snap
src/terminal/: capabilities.rs  detect.rs  multiplexer.rs  osc.rs  probe.rs  size.rs
src/terminal/capabilities/: iterm2.rs  kitty.rs  sixel.rs  terminology.rs
tapes/: demo.tape
tests/: cli.rs  render.rs  wrapping.rs
tests/snapshots/render/: ansi@commonmark-spec-001-tabs.snap  ansi@commonmark-spec-002-tabs.snap  ansi@commonmark-spec-003-tabs.snap  ansi@commonmark-spec-005-tabs.snap  ansi@commonmark-spec-006-tabs.snap  ansi@commonmark-spec-007-tabs.snap  ansi@commonmark-spec-008-tabs.snap  ansi@commonmark-spec-010-tabs.snap  ansi@commonmark-spec-018-backslash_escapes.snap  ansi@commonmark-spec-019-backslash_escapes.snap  ansi@commonmark-spec-024-backslash_escapes.snap  ansi@commonmark-spec-034-entity_and_numeric_character_references.snap  ansi@commonmark-spec-036-entity_and_numeric_character_references.snap  ansi@commonmark-spec-048-thematic_breaks.snap  ansi@commonmark-spec-059-thematic_breaks.snap  ansi@commonmark-spec-062-atx_headings.snap  ansi@commonmark-spec-066-atx_headings.snap  ansi@commonmark-spec-067-atx_headings.snap  ansi@commonmark-spec-068-atx_headings.snap  ansi@commonmark-spec-069-atx_headings.snap  ansi@commonmark-spec-071-atx_headings.snap  ansi@commonmark-spec-072-atx_headings.snap  ansi@commonmark-spec-073-atx_headings.snap  ansi@commonmark-spec-074-atx_headings.snap  ansi@commonmark-spec-075-atx_headings.snap  ansi@commonmark-spec-076-atx_headings.snap  ansi@commonmark-spec-077-atx_headings.snap  ansi@commonmark-spec-078-atx_headings.snap  ansi@commonmark-spec-079-atx_headings.snap  ansi@commonmark-spec-080-setext_headings.snap  ansi@commonmark-spec-081-setext_headings.snap  ansi@commonmark-spec-082-setext_headings.snap  ansi@commonmark-spec-083-setext_headings.snap  ansi@commonmark-spec-084-setext_headings.snap  ansi@commonmark-spec-085-setext_headings.snap  ansi@commonmark-spec-086-setext_headings.snap  ansi@commonmark-spec-089-setext_headings.snap  ansi@commonmark-spec-090-setext_headings.snap  ansi@commonmark-spec-091-setext_headings.snap  ansi@commonmark-spec-092-setext_headings.snap  (+408 more)
