[package]
name = "mdcat-ng"
description = "cat for markdown: show markdown documents in terminals"
readme = "README.md"
documentation = "https://docs.rs/mdcat-ng"
keywords = ["markdown", "less", "cat"]
homepage = "https://github.com/pawelb0/mdcat-ng"
repository = "https://github.com/pawelb0/mdcat-ng"
version = "0.2.1"
categories = ["command-line-utilities", "text-processing"]
license = "MPL-2.0 AND Apache-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"
rust-version = "1.83"

[workspace]

# Crate is `mdcat-ng` but the binaries keep the familiar `mdcat` /
# `mdless` names. Clap's multicall dispatches on argv[0], so the two
# entry points share one code path instead of being separate crates.
[lib]
name = "mdcat"
path = "src/lib.rs"

[[bin]]
name = "mdcat"
path = "src/main.rs"

[[bin]]
name = "mdless"
path = "src/bin/mdless.rs"

# Release tuning. LTO measurably did nothing on this codebase —
# mdcat is already inlined tightly per-crate and the hot paths
# don't cross crate boundaries. Keep just `strip` so the shipped
# binary isn't dragging debug info (~3 MB win).
[profile.release]
strip = "symbols"

# Dev tuning: `cargo run -- file.md` at opt-level 0 is 10–50x slower
# than release. Bumping our crate to opt-level 1 keeps debug info
# and incremental compilation while enabling inlining and register
# allocation that matter for the render state machine. Dependencies
# compile once per lockfile change, so give them the full release
# optimiser — it makes iteration far faster.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pedantic lints allowed: either style-only, too opinionated for this codebase,
# or would require a follow-up pass to address.
doc_markdown = "allow"
enum_glob_use = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnecessary_semicolon = "allow"
unnested_or_patterns = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"
# Safer in this codebase (narrow conversions used for byte/encoding sizes).
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"

[features]
default = ["svg", "image-processing", "sixel"]
svg = ["dep:resvg"]
image-processing = ["dep:image"]
# Sixel output — pure-Rust encoder via icy_sixel. Also requires
# image-processing to decode source images before encoding.
sixel = ["dep:icy_sixel", "image-processing"]

[dependencies]
anstyle = { version = "1.0.14", default-features = false }
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "env"] }
clap_complete = "4.6.2"
# Interactive mdless pager: raw-mode terminal I/O, keystroke decoding,
# alternate-screen handling. Cross-platform (Unix + Windows).
crossterm = { version = "0.29.0", features = ["events", "use-dev-tty"] }
curl = "0.4.49"
# Vendor OpenSSL so cross-compile targets don't need a system
# install for the non-host arch. Pulled via curl → curl-sys → openssl-sys.
openssl-sys = { version = "0.9", features = ["vendored"] }
gethostname = "1.1.0"
mime = { version = "0.3.17", default-features = false }
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["simd"] }
# Search patterns in the interactive mdless pager.
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode-perl"] }
shell-words = { version = "1.1.1", default-features = false, features = ["std"] }
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy", "default-syntaxes"] }
textwrap = { version = "0.16.2", default-features = false, features = ["unicode-linebreak", "unicode-width"] }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "std", "fmt", "ansi"] }
url = "2.5.8"

# Optional for svg support
resvg = { version = "0.47.0", optional = true, default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
# Optional for image processing support; we deliberately build with default
# features to include all possible image formats
image = { version = "0.25.10", optional = true }
# Pure-Rust sixel encoder for terminals that speak DEC sixel.
icy_sixel = { version = "0.5.0", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
# `insta`'s `glob` feature re-exports the `glob!` macro; no need to depend
# on the `glob` crate directly.
insta = { version = "1.47.2", features = ["glob", "filters"] }
similar-asserts = "2.0.0"
temp-env = { version = "0.3.6", default-features = false }

[build-dependencies]
syntect = { version = "5.3.0", default-features = false, features = ["plist-load", "dump-create", "regex-fancy"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", default-features = false, features = ["std", "termios", "system"] }

[target.'cfg(windows)'.dependencies]
anstyle-query = { version = "1.1.5", default-features = false }
terminal_size = "0.4.4"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/mdcat-ng-{ version }/mdcat-ng-{ version }-{ target }{ archive-suffix }"
bin-dir = "mdcat-ng-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.release]
release = true
pre-release-replacements = [
    # Update version and release date in manpage
    { file="mdcat.1.adoc", search="(?m)^:revnumber:.*$", replace = ":revnumber: {{version}}" },
    { file="mdcat.1.adoc", search="(?m)^:revdate:.*$", replace = ":revdate: {{date}}" },
    # Update the changelog
    { file="CHANGELOG.md", search="## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file="CHANGELOG.md", search="HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file="CHANGELOG.md", search="\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/pawelb0/mdcat-ng/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
allow-branch = ["main"]
pre-release-commit-message = "Release {{version}}"
tag-prefix = "mdcat-ng-"
tag-name = "{{prefix}}{{version}}"
tag-message = "mdcat-ng {{version}}"
sign-tag = true
# Github CI does this for us.
verify = false
